PA2/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS error '{' error '}' ';'
    5      | CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    7 feature_list: feature_list feature
    8             | %empty

    9 feature: OBJECTID ':' TYPEID ';'
   10        | OBJECTID ':' TYPEID ASSIGN expression ';'
   11        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | error ';'

   13 formal_list: formals
   14            | %empty

   15 formals: formals ',' formal
   16        | formal

   17 formal: OBJECTID ':' TYPEID

   18 expression: OBJECTID ASSIGN expression
   19           | dispatch_expression
   20           | OBJECTID '(' param_list ')'
   21           | IF expression THEN expression ELSE expression FI
   22           | WHILE expression LOOP expression POOL
   23           | block
   24           | let_expression
   25           | case_expression
   26           | NEW TYPEID
   27           | ISVOID expression
   28           | math_expressions
   29           | '~' expression
   30           | cmp_expressions
   31           | NOT expression
   32           | '(' expression ')'
   33           | OBJECTID
   34           | INT_CONST
   35           | STR_CONST
   36           | BOOL_CONST

   37 block: '{' expressions '}'

   38 expressions: expressions expression ';'
   39            | expression ';'
   40            | error ';'

   41 math_expressions: expression '+' expression
   42                 | expression '-' expression
   43                 | expression '*' expression
   44                 | expression '/' expression

   45 cmp_expressions: expression '<' expression
   46                | expression LE expression
   47                | expression '=' expression

   48 dispatch_expression: expression '@' TYPEID '.' OBJECTID '(' param_list ')'
   49                    | expression '.' OBJECTID '(' param_list ')'

   50 case_expression: CASE expression OF cases ESAC

   51 cases: cases single_case ';'
   52      | single_case ';'

   53 single_case: OBJECTID ':' TYPEID DARROW expression

   54 let_expression: LET let_sub_expr

   55 let_sub_expr: OBJECTID ':' TYPEID ASSIGN expression ',' let_sub_expr
   56             | OBJECTID ':' TYPEID ',' let_sub_expr
   57             | OBJECTID ':' TYPEID ASSIGN expression IN expression
   58             | OBJECTID ':' TYPEID IN expression
   59             | error ',' let_sub_expr

   60 param_list: params
   61           | %empty

   62 params: params ',' expression
   63       | expression


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 20 32 48 49
    ')' (41) 11 20 32 48 49
    '*' (42) 43
    '+' (43) 41
    ',' (44) 15 55 56 59 62
    '-' (45) 42
    '.' (46) 48 49
    '/' (47) 44
    ':' (58) 9 10 11 17 53 55 56 57 58
    ';' (59) 4 5 6 9 10 11 12 38 39 40 51 52
    '<' (60) 45
    '=' (61) 47
    '@' (64) 48
    '{' (123) 4 5 6 11 37
    '}' (125) 4 5 6 11 37
    '~' (126) 29
    error (256) 4 12 40 59
    CLASS (258) 4 5 6
    ELSE (259) 21
    FI (260) 21
    IF (261) 21
    IN (262) 57 58
    INHERITS (263) 6
    LET (264) 54
    LOOP (265) 22
    POOL (266) 22
    THEN (267) 21
    WHILE (268) 22
    CASE (269) 50
    ESAC (270) 50
    OF (271) 50
    DARROW (272) 53
    NEW (273) 26
    ISVOID (274) 27
    STR_CONST <symbol> (275) 35
    INT_CONST <symbol> (276) 34
    BOOL_CONST <boolean> (277) 36
    TYPEID <symbol> (278) 5 6 9 10 11 17 26 48 53 55 56 57 58
    OBJECTID <symbol> (279) 9 10 11 17 18 20 33 48 49 53 55 56 57 58
    ASSIGN (280) 10 18 55 57
    NOT (281) 31
    LE (282) 46
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8
        on right: 5 6 7
    feature <feature> (50)
        on left: 9 10 11 12
        on right: 7
    formal_list <formals> (51)
        on left: 13 14
        on right: 11
    formals <formals> (52)
        on left: 15 16
        on right: 13 15
    formal <formal> (53)
        on left: 17
        on right: 15 16
    expression <expression> (54)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 10 11 18 21 22 27 29 31 32 38 39 41 42 43 44 45 46 47 48 49 50 53 55 57 58 62 63
    block <expression> (55)
        on left: 37
        on right: 23
    expressions <expressions> (56)
        on left: 38 39 40
        on right: 37 38
    math_expressions <expression> (57)
        on left: 41 42 43 44
        on right: 28
    cmp_expressions <expression> (58)
        on left: 45 46 47
        on right: 30
    dispatch_expression <expression> (59)
        on left: 48 49
        on right: 19
    case_expression <expression> (60)
        on left: 50
        on right: 25
    cases <cases> (61)
        on left: 51 52
        on right: 50 51
    single_case <case_> (62)
        on left: 53
        on right: 51 52
    let_expression <expression> (63)
        on left: 54
        on right: 24
    let_sub_expr <expression> (64)
        on left: 55 56 57 58 59
        on right: 54 55 56 59
    param_list <expressions> (65)
        on left: 60 61
        on right: 20 48 49
    params <expressions> (66)
        on left: 62 63
        on right: 60 62


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . error '{' error '}' ';'
    5      | CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS error . '{' error '}' ';'

    '{'  shift, and go to state 9


State 6

    5 class: CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    4 class: CLASS error '{' . error '}' ';'

    error  shift, and go to state 12


State 10

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 13


State 11

    5 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 14


State 12

    4 class: CLASS error '{' error . '}' ';'

    '}'  shift, and go to state 15


State 13

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 16


State 14

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    error     shift, and go to state 17
    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 19

    feature  go to state 20


State 15

    4 class: CLASS error '{' error '}' . ';'

    ';'  shift, and go to state 21


State 16

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 22


State 17

   12 feature: error . ';'

    ';'  shift, and go to state 23


State 18

    9 feature: OBJECTID . ':' TYPEID ';'
   10        | OBJECTID . ':' TYPEID ASSIGN expression ';'
   11        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 24
    '('  shift, and go to state 25


State 19

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 26


State 20

    7 feature_list: feature_list feature .

    $default  reduce using rule 7 (feature_list)


State 21

    4 class: CLASS error '{' error '}' ';' .

    $default  reduce using rule 4 (class)


State 22

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    error     shift, and go to state 17
    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 27

    feature  go to state 20


State 23

   12 feature: error ';' .

    $default  reduce using rule 12 (feature)


State 24

    9 feature: OBJECTID ':' . TYPEID ';'
   10        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 28


State 25

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 29

    $default  reduce using rule 14 (formal_list)

    formal_list  go to state 30
    formals      go to state 31
    formal       go to state 32


State 26

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 27

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 33


State 28

    9 feature: OBJECTID ':' TYPEID . ';'
   10        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 34
    ';'     shift, and go to state 35


State 29

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 36


State 30

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'

    ')'  shift, and go to state 37


State 31

   13 formal_list: formals .
   15 formals: formals . ',' formal

    ','  shift, and go to state 38

    $default  reduce using rule 13 (formal_list)


State 32

   16 formals: formal .

    $default  reduce using rule 16 (formals)


State 33

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 34

   10 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression           go to state 53
    block                go to state 54
    math_expressions     go to state 55
    cmp_expressions      go to state 56
    dispatch_expression  go to state 57
    case_expression      go to state 58
    let_expression       go to state 59


State 35

    9 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 9 (feature)


State 36

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 60


State 37

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 61


State 38

   15 formals: formals ',' . formal

    OBJECTID  shift, and go to state 29

    formal  go to state 62


State 39

   21 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression           go to state 63
    block                go to state 54
    math_expressions     go to state 55
    cmp_expressions      go to state 56
    dispatch_expression  go to state 57
    case_expression      go to state 58
    let_expression       go to state 59


State 40

   54 let_expression: LET . let_sub_expr

    error     shift, and go to state 64
    OBJECTID  shift, and go to state 65

    let_sub_expr  go to state 66


State 41

   22 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression           go to state 67
    block                go to state 54
    math_expressions     go to state 55
    cmp_expressions      go to state 56
    dispatch_expression  go to state 57
    case_expression      go to state 58
    let_expression       go to state 59


State 42

   50 case_expression: CASE . expression OF cases ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression           go to state 68
    block                go to state 54
    math_expressions     go to state 55
    cmp_expressions      go to state 56
    dispatch_expression  go to state 57
    case_expression      go to state 58
    let_expression       go to state 59


State 43

   26 expression: NEW . TYPEID

    TYPEID  shift, and go to state 69


State 44

   27 expression: ISVOID . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression           go to state 70
    block                go to state 54
    math_expressions     go to state 55
    cmp_expressions      go to state 56
    dispatch_expression  go to state 57
    case_expression      go to state 58
    let_expression       go to state 59


State 45

   35 expression: STR_CONST .

    $default  reduce using rule 35 (expression)


State 46

   34 expression: INT_CONST .

    $default  reduce using rule 34 (expression)


State 47

   36 expression: BOOL_CONST .

    $default  reduce using rule 36 (expression)


State 48

   18 expression: OBJECTID . ASSIGN expression
   20           | OBJECTID . '(' param_list ')'
   33           | OBJECTID .

    ASSIGN  shift, and go to state 71
    '('     shift, and go to state 72

    $default  reduce using rule 33 (expression)


State 49

   31 expression: NOT . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression           go to state 73
    block                go to state 54
    math_expressions     go to state 55
    cmp_expressions      go to state 56
    dispatch_expression  go to state 57
    case_expression      go to state 58
    let_expression       go to state 59


State 50

   29 expression: '~' . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression           go to state 74
    block                go to state 54
    math_expressions     go to state 55
    cmp_expressions      go to state 56
    dispatch_expression  go to state 57
    case_expression      go to state 58
    let_expression       go to state 59


State 51

   37 block: '{' . expressions '}'

    error       shift, and go to state 75
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression           go to state 76
    block                go to state 54
    expressions          go to state 77
    math_expressions     go to state 55
    cmp_expressions      go to state 56
    dispatch_expression  go to state 57
    case_expression      go to state 58
    let_expression       go to state 59


State 52

   32 expression: '(' . expression ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression           go to state 78
    block                go to state 54
    math_expressions     go to state 55
    cmp_expressions      go to state 56
    dispatch_expression  go to state 57
    case_expression      go to state 58
    let_expression       go to state 59


State 53

   10 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   41 math_expressions: expression . '+' expression
   42                 | expression . '-' expression
   43                 | expression . '*' expression
   44                 | expression . '/' expression
   45 cmp_expressions: expression . '<' expression
   46                | expression . LE expression
   47                | expression . '=' expression
   48 dispatch_expression: expression . '@' TYPEID '.' OBJECTID '(' param_list ')'
   49                    | expression . '.' OBJECTID '(' param_list ')'

    LE   shift, and go to state 79
    '<'  shift, and go to state 80
    '='  shift, and go to state 81
    '+'  shift, and go to state 82
    '-'  shift, and go to state 83
    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '@'  shift, and go to state 86
    '.'  shift, and go to state 87
    ';'  shift, and go to state 88


State 54

   23 expression: block .

    $default  reduce using rule 23 (expression)


State 55

   28 expression: math_expressions .

    $default  reduce using rule 28 (expression)


State 56

   30 expression: cmp_expressions .

    $default  reduce using rule 30 (expression)


State 57

   19 expression: dispatch_expression .

    $default  reduce using rule 19 (expression)


State 58

   25 expression: case_expression .

    $default  reduce using rule 25 (expression)


State 59

   24 expression: let_expression .

    $default  reduce using rule 24 (expression)


State 60

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 61

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 89


State 62

   15 formals: formals ',' formal .

    $default  reduce using rule 15 (formals)


State 63

   21 expression: IF expression . THEN expression ELSE expression FI
   41 math_expressions: expression . '+' expression
   42                 | expression . '-' expression
   43                 | expression . '*' expression
   44                 | expression . '/' expression
   45 cmp_expressions: expression . '<' expression
   46                | expression . LE expression
   47                | expression . '=' expression
   48 dispatch_expression: expression . '@' TYPEID '.' OBJECTID '(' param_list ')'
   49                    | expression . '.' OBJECTID '(' param_list ')'

    THEN  shift, and go to state 90
    LE    shift, and go to state 79
    '<'   shift, and go to state 80
    '='   shift, and go to state 81
    '+'   shift, and go to state 82
    '-'   shift, and go to state 83
    '*'   shift, and go to state 84
    '/'   shift, and go to state 85
    '@'   shift, and go to state 86
    '.'   shift, and go to state 87


State 64

   59 let_sub_expr: error . ',' let_sub_expr

    ','  shift, and go to state 91


State 65

   55 let_sub_expr: OBJECTID . ':' TYPEID ASSIGN expression ',' let_sub_expr
   56             | OBJECTID . ':' TYPEID ',' let_sub_expr
   57             | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   58             | OBJECTID . ':' TYPEID IN expression

    ':'  shift, and go to state 92


State 66

   54 let_expression: LET let_sub_expr .

    $default  reduce using rule 54 (let_expression)


State 67

   22 expression: WHILE expression . LOOP expression POOL
   41 math_expressions: expression . '+' expression
   42                 | expression . '-' expression
   43                 | expression . '*' expression
   44                 | expression . '/' expression
   45 cmp_expressions: expression . '<' expression
   46                | expression . LE expression
   47                | expression . '=' expression
   48 dispatch_expression: expression . '@' TYPEID '.' OBJECTID '(' param_list ')'
   49                    | expression . '.' OBJECTID '(' param_list ')'

    LOOP  shift, and go to state 93
    LE    shift, and go to state 79
    '<'   shift, and go to state 80
    '='   shift, and go to state 81
    '+'   shift, and go to state 82
    '-'   shift, and go to state 83
    '*'   shift, and go to state 84
    '/'   shift, and go to state 85
    '@'   shift, and go to state 86
    '.'   shift, and go to state 87


State 68
